# groundtruther-mcp

./: README.md  package-lock.json  package.json  publish.sh  pyproject.toml
src/: index.ts
src/groundtruther_mcp/: __init__.py  client.py  config.py  server.py  tools.py
tests/: __init__.py  openapi-schema.json  test_contract.py  test_tools.py
